Bug 391911 - Shape aspect ratio always changes to 1:1, when entering a value starting with "1" and lock ratio (chain symbol) is enabled.
Summary: Shape aspect ratio always changes to 1:1, when entering a value starting with...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Appimage Linux
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-03-16 04:03 UTC by mvowada
Modified: 2018-04-03 11:46 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
(Video) (555.19 KB, video/mp4)
2018-03-16 04:03 UTC, mvowada
Details

Note You need to log in before you can comment on or make changes to this bug.
Description mvowada 2018-03-16 04:03:33 UTC
Created attachment 111431 [details]
(Video)

(Krita Version: 4.1.0-pre-alpha (git 97015cd) - Ubuntu 14.04 Unity)

Steps (see video):

    1) canvas > click-select a shape whose ratio is not 1:1
    2) "Tool Options" > "Geometry" tab > enable "lock ratio" (chain)
    3) type in "100" as width

Actual Results: shape ratio always changes to 1:1
Comment 1 Dmitry Kazakov 2018-03-26 16:13:28 UTC
Git commit 650ef3dc4c4a662ff8806ccb602d4ea598f8213d by Dmitry Kazakov.
Committed on 26/03/2018 at 16:10.
Pushed by dkazakov into branch 'master'.

Fix cycling updates of the aspect ratio of the shapes

M  +20   -6    plugins/tools/defaulttool/defaulttool/DefaultToolGeometryWidget.cpp
M  +2    -1    plugins/tools/defaulttool/defaulttool/DefaultToolGeometryWidget.h

https://commits.kde.org/krita/650ef3dc4c4a662ff8806ccb602d4ea598f8213d
Comment 2 Halla Rempt 2018-04-03 11:46:11 UTC
Git commit fc5a39e54bdd636317aec78abadc38e813d44b2d by Boudewijn Rempt, on behalf of Dmitry Kazakov.
Committed on 03/04/2018 at 11:16.
Pushed by rempt into branch 'krita/4.0'.

Fix cycling updates of the aspect ratio of the shapes
(cherry picked from commit 650ef3dc4c4a662ff8806ccb602d4ea598f8213d)

M  +20   -6    plugins/tools/defaulttool/defaulttool/DefaultToolGeometryWidget.cpp
M  +2    -1    plugins/tools/defaulttool/defaulttool/DefaultToolGeometryWidget.h

https://commits.kde.org/krita/fc5a39e54bdd636317aec78abadc38e813d44b2d