Fix cycling updates of the aspect ratio of the shapes

BUG:391911